syntax = "proto3";

//Contrato de ligação com a API via gRPC

message User {
   int32 id = 1;
   string email = 2;
   string username = 3;
   string password = 4;
}

// parametros do usuário
message RegisterUserRequest {
  User user = 1;
}

// parametros para o login
message LoginUserRequest {
  User user = 1;
}

// token retornado depois do login do usuário
message LoginResponse {
  string token = 1;
}

// id do usuário
message GetUsersByIdRequest {
  int32 id = 1;
}

// resposta que será retornada ao usuário
message UserResponse {
  User user = 1;
}

// rpc => como se fosse uma função
service UserService {
  rpc getUsersById(GetUsersByIdRequest) returns (UserResponse);
  rpc registerUser(RegisterUserRequest) returns (UserResponse);
  rpc loginUser(LoginUserRequest) returns (LoginResponse);
}

